# quasar-agent

./: .env.example  .gitignore  .npmrc  Cargo.toml  README.md  README_RUST.md  RUST_MIGRATION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quasar.config.example.ts  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: build-native.yml
crates/quasar-agent/: Cargo.toml
crates/quasar-agent/src/: agent_loop.rs  context.rs  lib.rs  prompt.rs
crates/quasar-agent/src/providers/: anthropic.rs  google.rs  mod.rs  openai.rs
crates/quasar-cli/: Cargo.toml
crates/quasar-cli/src/: main.rs
crates/quasar-core/: Cargo.toml
crates/quasar-core/src/: cache.rs  config.rs  errors.rs  events.rs  lib.rs  logger.rs  retry.rs
crates/quasar-core/src/types/: agent.rs  config.rs  message.rs  mod.rs  session.rs  tool.rs
crates/quasar-mcp/: Cargo.toml
crates/quasar-mcp/src/: client.rs  lib.rs
crates/quasar-memory/: Cargo.toml
crates/quasar-memory/src/: lib.rs  sqlite.rs
crates/quasar-tools/: Cargo.toml
crates/quasar-tools/src/: exec.rs  fs.rs  lib.rs  registry.rs  web.rs
examples/: quasar.example.toml
modules/computer-use/: main.py  requirements.txt
native/: Cargo.toml  index.d.ts  index.js  package.json
native/src/: lib.rs
plugins/hello/: handler.js  plugin.json
scratch/: list_all_gemini.py  test_gemini.py  test_gemini_ts.ts  test_gemini_vision.py  test_openrouter.py
scripts/: doctor.ts  install-service.ps1  screenshot-dashboard.ts  test-imports.ts  test-improvements.ts  test-playwright.ts  test-web.ts
skills/: coding.md  research.md
tests/: cache.test.ts  context.test.ts  events.test.ts  markdown-memory.test.ts  mcp.test.ts  providers.test.ts  retry.test.ts  sandbox.test.ts  sync-manager.test.ts  test-profile.ts
